Bug 1105184 - Setup the mCaret used for DND so that it displays the caret also when dragging a selection within the same shell.  r=roc a=sledru